fixed up a few layout issues

--- a/app/assets/stylesheets/flights.scss
+++ b/app/assets/stylesheets/flights.scss
@@ -52,9 +52,17 @@
 #flight-index-header {
   max-width: 1400px;
   margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
+  display: grid;
+  grid-template-columns: 1fr 10rem;
+}
+
+#flight-index-header form {
+  justify-self: end;
+  align-self: flex-end;
+
+  select {
+    padding: 0.5rem;
+  }
 }
 
 .flight-header {
@@ -102,13 +110,22 @@
   color: #666;
 }
 
+.pagination-container {
+  height: 4rem;
+  width: 100%;
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media (max-width: 575.9px) {
   #results-container {
     padding: 0.5rem;
   }
 
   #flight-index-header {
-    flex-direction: column;
+    grid-template-columns: 1fr;
   }
 
   #flight-index-header form {
@@ -128,6 +145,16 @@
 }
 
 @media (min-width: 576px) {
+  #flight-index-header {
+    grid-template-columns: 1fr;
+  }
+
+  #flight-index-header form {
+    margin-top: 1rem;
+    align-self: flex-end;
+    justify-self: flex-end;
+  }
+
   #results-container {
     padding: 0.5rem;
   }
@@ -143,6 +170,16 @@
 }
 
 @media (min-width: 768px) {
+  #flight-index-header {
+    grid-template-columns: 1fr 10rem;
+  }
+
+  #flight-index-header form {
+    margin-top: 1rem;
+    align-self: flex-end;
+    justify-self: flex-end;
+  }
+
   #results-container {
     padding: 2rem;
   }
